added new animations

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script type="text/javascript" src="./animator.js"></script>
     <script type="text/javascript" src="./grant.js"></script>
     <script type="text/javascript" src="./grantJump.js"></script>
+    <script type="text/javascript" src="./flashrun.js"></script>
     <script type="text/javascript" src="./main.js"></script>
 </head>
 <body>
