--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script type="text/javascript" src="./grant.js"></script>
     <script type="text/javascript" src="./grantJump.js"></script>
     <script type="text/javascript" src="./flashrun.js"></script>
+    <script type="text/javascript" src="./vexy.js"></script>
     <script type="text/javascript" src="./main.js"></script>
 </head>
 <body>
